--- a/index.css
+++ b/index.css
@@ -4,8 +4,9 @@
 }
 
 #dan_bus_prof {
-    max-width: 500px;
     display: block;
+    width: 100%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
 }
