added links to linkedin, github, and instagram

--- a/index.css
+++ b/index.css
@@ -15,6 +15,12 @@
     margin-top: 10px;
 }
 
+#socials {
+    text-align: center;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
 #courses {
     margin-top: 20px;
 }
