--- a/index.css
+++ b/index.css
@@ -22,14 +22,17 @@
 }
 
 #courses {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 #welcome_box {
-    width: 100%;
-    padding: 20px;
+    /* width: 100%; */
 }
 
 .panel-group {
     margin-left: 15px;
+}
+
+#projects {
+    margin-top: 40px;
 }
